# Patterns-Final

./: .gitignore  README.md  Readme.md  pyproject.toml
playground/core/enums/: receipt_status.py  shift_state.py
playground/core/models/: campaign.py  payments.py  product.py  receipt.py  revenue.py  sales.py  shift.py  x_report.py
playground/core/services/classes/: campaign_classes.py  campaign_factory.py  campaign_service.py  payment_service.py  product_service.py  receipt_service.py  repository_in_memory_chooser.py  repositroy_sql_lite_chooser.py  service_chooser.py  shift_service.py
playground/core/services/interfaces/: campaign_service_interface.py  currency_converter_interface.py  product_service_interface.py  (+1 more)
playground/infra/API/: campaigns_api.py  payments_api.py  products_api.py  receipts_api.py  report_api.py  sales_api.py  shifts_api.py
playground/infra/currency_converter/: er_api_converter.py
playground/infra/memory/: payment_in_memory_repository.py
playground/runner/: main.py  setup.py
tests/: product_service_test.py
tests/campains/: campaign_api_tests.py  campaign_service_test.py  campaign_sql_lite_tests.py  campaign_test_db  campain_service_test.py
tests/payments/: converter_test.py  payment_service_test.py  payment_sql_lite_test.py  product_api_test.py
tests/products/: product_api_tests.py  product_service_test.py  products_sql_lite_test.py
tests/receipts/: receipts_api_test.py  receipts_service_test.py  receipts_sql_lite_test.py
tests/shifts/: shift_api_test.py  shift_service_test.py  shift_sql_lite_test.py
(+24 files in other folders)
